--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer set-bg" data-setbg=""></footer>
+<footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
