--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Anasayfa</a></li>
-                            <li><a href="./projects.html">Projects</a></li>
+                            <li><a href="./projects.html">Galeri</a></li>
                             <li><a href="./about.html">About</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -211,7 +211,7 @@
     <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
-    <div id="footer"></div>
+    <div id="footer" ></div>
 
     <script>
       fetch("footer.html")
