--- a/blog-details.html
+++ b/blog-details.html
@@ -37,8 +37,9 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <a href="about.html" >
+                <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
+            </a>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
@@ -56,7 +57,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./projects.html">Projects</a></li>
+                            <li><a href="./galeri.html">Projects</a></li>
                             <li><a href="./about.html">About</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
