--- a/galeri.html
+++ b/galeri.html
@@ -37,8 +37,9 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <a href="about.html" >
+                <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
+            </a>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
@@ -55,9 +56,9 @@
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li class="active"><a href="./projects.html">Projects</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li ><a href="./index.html">Anasayfa</a></li>
+                            <li><a href="./about.html">Hakkımızda</a></li>
+                            <li class="active"><a href="./galeri.html">Galeri</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -66,15 +67,16 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li ><a href="./blog.html" >Basında Biz</a></li>
+                            <li><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
-                    <div class="header__widget">
-                        <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                    <div class="header__widget" >
+                        <a href="about.html" >
+                            <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px;  ">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -89,10 +91,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Our Projects</h2>
+                        <h2>GALERİ</h2>
                         <div class="breadcrumb__links">
-                            <a href="./index.html">Home</a>
-                            <span>Projects</span>
+                            <a href="./index.html">ANASAYFA</a>
+                            <span>GALERİ</span>
                         </div>
                     </div>
                 </div>
@@ -141,6 +143,18 @@
                         <h4><a href="#">Funiture</a></h4>
                     </div>
                 </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="img/project/project-p6.jpg" alt="">
+                        <h4><a href="#">Funiture</a></h4>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="project__item">
+                        <img src="img/project/project-p6.jpg" alt="">
+                        <h4><a href="#">Funiture</a></h4>
+                    </div>
+                </div>
                 <div class="col-lg-12 text-center">
                     <a href="#" class="primary-btn normal-btn">Load More</a>
                 </div>
@@ -152,23 +166,6 @@
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
-            <div class="footer__top">
-                <div class="row">
-                    <div class="col-lg-8 col-md-6">
-                        <div class="footer__top__text">
-                            <h2>Ready To Work With Us?</h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer__top__newslatter">
-                            <form action="#">
-                                <input type="text" placeholder="Enter your email...">
-                                <button type="submit"><i class="fa fa-send"></i></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
