--- a/project-details.html
+++ b/project-details.html
@@ -37,8 +37,9 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <a href="about.html" >
+                <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
+            </a>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
