--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,9 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <a href="about.html" >
+                <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
+            </a>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
@@ -55,9 +56,9 @@
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./projects.html">Projects</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li ><a href="./index.html">Anasayfa</a></li>
+                            <li><a href="./about.html">Hakkımızda</a></li>
+                            <li ><a href="./galeri.html">Galeri</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -66,15 +67,16 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li class="active"><a href="./contact.html">Contact</a></li>
+                            <li ><a href="./blog.html" >Basında Biz</a></li>
+                            <li class="active"><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
-                        <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <a href="about.html" >
+                            <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -90,11 +92,9 @@
                 <div class="col-lg-5">
                     <div class="contact__text">
                         <div class="section-title">
-                            <span>Information</span>
-                            <h2>Contact Details</h2>
+                            <span>AYZ İNŞAAT</span>
+                            <h2>İLETİŞİM</h2>
                         </div>
-                        <p>As you might expect of a company that began as a high-end interiors contractor, we pay strict
-                        attention.</p>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                             <img src="img/contact/ci-1.png" alt="">
                         </div>
                         <div class="contact__widget__item__text">
-                            <h5>Phone Number</h5>
+                            <h5>TEL</h5>
                             <span>+01 123 456 789</span>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                             <img src="img/contact/ci-2.png" alt="">
                         </div>
                         <div class="contact__widget__item__text">
-                            <h5>Email Address</h5>
+                            <h5>MAİL ADRESİ</h5>
                             <span>info.colorlib@gmail.com</span>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             <img src="img/contact/ci-3.png" alt="">
                         </div>
                         <div class="contact__widget__item__text">
-                            <h5>Office Location</h5>
+                            <h5>ADRES</h5>
                             <span>7176 Blue Spring Lane, NY, US</span>
                         </div>
                     </div>
@@ -140,35 +140,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="contact__form__text">
-                        <div class="section-title">
-                            <span>Form</span>
-                            <h2>Get in touch</h2>
-                        </div>
-                        <p>As you might expect of a company that began as a high-end interiors contractor, we pay strict
-                        attention.</p>
-                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8">
-                    <div class="contact__form">
-                        <form action="#">
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="text" placeholder="Name">
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="text" placeholder="Email">
-                                </div>
-                                <div class="col-lg-12">
-                                    <textarea placeholder="Message"></textarea>
-                                    <button type="submit" class="site-btn">Send Message</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -177,23 +151,6 @@
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
-            <div class="footer__top">
-                <div class="row">
-                    <div class="col-lg-8 col-md-6">
-                        <div class="footer__top__text">
-                            <h2>Ready To Work With Us?</h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer__top__newslatter">
-                            <form action="#">
-                                <input type="text" placeholder="Enter your email...">
-                                <button type="submit"><i class="fa fa-send"></i></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
