--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <a href="about.html" >
+                <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
+            </a>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
@@ -57,8 +58,8 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Anasayfa</a></li>
-                            <li><a href="./projects.html">Galeri</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./about.html">Hakkımızda</a></li>
+                            <li><a href="./galeri.html">Galeri</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -67,15 +68,16 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li ><a href="./blog.html" >Basında Biz</a></li>
+                            <li><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
-                        <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <a href="about.html" >
+                            <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -151,10 +153,26 @@
     </section>
     <!-- About Section End -->
 
+ <!-- Call To Action Section Begin -->
+    <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-10 text-center">
+                    <div class="callto__text">
+                        <span>Why choose us?</span>
+                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
+                        </h2>
+                        <a href="#" class="primary-btn">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br><br>
+    <!-- Call To Action Section End -->
 
- 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
+    <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg" style="margin-bottom: -200px;margin-top: -50px; ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -186,22 +204,9 @@
 
  
 
-    <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
-        <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-10 text-center">
-                    <div class="callto__text">
-                        <span>Why choose us?</span>
-                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
-                        </h2>
-                        <a href="#" class="primary-btn">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Call To Action Section End -->
+   
+   
+ 
 
     <!-- Latest Section Begin -->
     <section class="latest spad">
@@ -211,17 +216,83 @@
     <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
-    <div id="footer" ></div>
-
-    <script>
-      fetch("footer.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("footer").innerHTML = data;
-        })
-        .catch((error) => console.error("Footer yüklenirken hata:", error));
-    </script>
-  
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="footer__about">
+                        <div class="footer__logo">
+                            <a href="#"><img src="img/logo.png" alt=""></a>
+                        </div>
+                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <ul>
+                            <li>Info.colorlib@gmail.com</li>
+                            <li>+84 123 456 789</li>
+                        </ul>
+                        <div class="footer__social">
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
+                    <div class="footer__widget">
+                        <h6>Company</h6>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Our Works</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">FAQs</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6">
+                    <div class="footer__widget">
+                        <h6>Services</h6>
+                        <ul>
+                            <li><a href="#">Architecture</a></li>
+                            <li><a href="#">Interior Design</a></li>
+                            <li><a href="#">Exterior Design</a></li>
+                            <li><a href="#">Planning</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__address">
+                        <h6>Get In Touch</h6>
+                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <ul>
+                            <li>Info.colorlib@gmail.com</li>
+                            <li>+84 123 456 789</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-lg-8 col-md-7">
+                        <div class="copyright__text">
+                            <p>Copyright © <script>
+                                document.write(new Date().getFullYear());
+                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
+                            aria-hidden="true"></i> by <a href="https://colorlib.com"
+                            target="_blank">Colorlib</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-5">
+                    <div class="copyright__widget">
+                        <a href="#">Terms of use</a>
+                        <a href="#">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </footer>
 <!-- Footer Section End -->
 
 <!-- Js Plugins -->
