--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>AYZ İNŞAAT</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -86,7 +86,14 @@
     <!-- Header Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <div class="breadcrumb-option spad" style="
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(img/ayz/atesABOUT.png);
+    background-size: cover;
+    background-position: center;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -101,6 +108,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Breadcrumb Section End -->
 
     <!-- About Page Section Begin -->
@@ -110,8 +118,8 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="about__text about__page__text">
                         <div class="section-title">
-                            <span>who are we</span>
-                            <h2>About Us</h2>
+                            <span>AYZ İNŞAAT</span>
+                            <h2>HAKKIMIZDA</h2>
                         </div>
                         <div class="about__para__text">
                             <p>As you might expect of a company that began as a high-end interiors contractor.</p>
@@ -152,7 +160,14 @@
     <!-- About Page Section End -->
 
     <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
+    <section class="callto spad" style="
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(img/ayz/ates-insaat-04.jpg);
+    background-size: cover;
+    background-position: center;">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10 text-center">
@@ -165,31 +180,32 @@
             </div>
         </div>
     </section>
+    
     <!-- Call To Action Section End -->
 
     <!-- Team Section Begin -->
     <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12" >
                     <div class="logo__carousel owl-carousel">
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-1.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-2.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-4.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-5.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt=""></a>
                         </div>
                     </div>
                 </div>
