--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>AYZ İNŞAAT</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -45,7 +45,7 @@
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
-    <header class="header header-normal set-bg" data-setbg="img/little-header.jpg">
+    <header class="header header-normal set-bg" style="background-color: black;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
@@ -117,7 +117,7 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h5>MAİL ADRESİ</h5>
-                            <span>info.colorlib@gmail.com</span>
+                            <span>info@gmail.com</span>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                         </div>
                         <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
+                            <li>Info@gmail.com</li>
                             <li>+84 123 456 789</li>
                         </ul>
                         <div class="footer__social">
@@ -198,7 +198,7 @@
                         <h6>Get In Touch</h6>
                         <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
+                            <li>Info@gmail.com</li>
                             <li>+84 123 456 789</li>
                         </ul>
                     </div>
