--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>AYZ İNŞAAT</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -85,7 +85,14 @@
     <!-- Header Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <div class="breadcrumb-option spad" style="
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(img/ayz/ates-insaat-03.jpg);
+    background-size: cover;
+    background-position: center;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -100,6 +107,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Breadcrumb Section End -->
 
     <!-- Blog Section Begin -->
