--- a/galeri.html
+++ b/galeri.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>AYZ İNŞAAT</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -86,7 +86,14 @@
     <!-- Header Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <div class="breadcrumb-option spad" style="
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(img/ayz/ates-insaat-06.jpg);
+    background-size: cover;
+    background-position: center;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -101,6 +108,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Breadcrumb Section End -->
 
     <!-- Project Page Section Begin -->
@@ -109,49 +117,37 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="img/project/project-p1.jpg" alt="">
+                        <img src="img/ayz/ates-insaat-04.jpg" alt="">
                         <h4><a href="#">Office Building</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="img/project/project-p2.jpg" alt="">
+                        <img src="img/ayz/ates-insaat-03.jpg" alt="">
                         <h4><a href="#">Funiture Decorative</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="img/project/project-p3.jpg" alt="">
+                        <img src="img/ayz/ates-insaat-06.jpg" alt="">
                         <h4><a href="#">Interior Design</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="img/project/project-p4.jpg" alt="">
+                        <img src="img/ayz/ates-insaat-10.jpg" alt="">
                         <h4><a href="#">Home Building</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="img/project/project-p5.jpg" alt="">
+                        <img src="img/ayz/ates-insaat-01.jpg" alt="">
                         <h4><a href="#">Decoration</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <img src="img/project/project-p6.jpg" alt="">
-                        <h4><a href="#">Funiture</a></h4>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="project__item">
-                        <img src="img/project/project-p6.jpg" alt="">
-                        <h4><a href="#">Funiture</a></h4>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="project__item">
-                        <img src="img/project/project-p6.jpg" alt="">
+                        <img src="img/ayz/ates-insaat-08.jpg" alt="">
                         <h4><a href="#">Funiture</a></h4>
                     </div>
                 </div>
