--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>AYZ İNŞAAT</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
@@ -38,7 +38,7 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <a href="about.html" >
+            <a href="about.html">
                 <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
             </a>
         </div>
@@ -68,14 +68,14 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li ><a href="./blog.html" >Basında Biz</a></li>
+                            <li><a href="./blog.html">Basında Biz</a></li>
                             <li><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
-                        <a href="about.html" >
+                        <a href="about.html">
                             <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
                         </a>
                     </div>
@@ -89,10 +89,18 @@
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__items" style="
+            background: linear-gradient(
+                rgba(0, 0, 0, 0.4),
+                rgba(0, 0, 0, 0.4)
+              ),
+              url(img/ayz/atesABOUT.png);
+            background-size: cover;
+            background-position: center;
+          ">
                 <div class="hero__text">
                     <h2>Quality is not only our standard.</h2>
-                    <a href="#" class="primary-btn">See Project</a>
+                    <a href="#" class="primary-btn" style="background-color: rgb(0, 0, 0);">See Project</a>
                     <a href="#" class="more_btn">Discover more</a>
                     <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -102,10 +110,18 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__items" style="
+            background: linear-gradient(
+                rgba(0, 0, 0, 0.4),
+                rgba(0, 0, 0, 0.4)
+              ),
+              url(img/ayz/ates-insaat-makina-16.jpg);
+            background-size: cover;
+            background-position: center;
+          ">
                 <div class="hero__text">
                     <h2>Quality is not only our standard.</h2>
-                    <a href="#" class="primary-btn">See Project</a>
+                    <a href="#" class="primary-btn" style="background-color: rgb(0, 0, 0);">See Project</a>
                     <a href="#" class="more_btn">Discover more</a>
                     <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -115,6 +131,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
         <div class="slide-num" id="snh-1"></div>
         <div class="slider__progress"><span></span></div>
@@ -134,9 +151,9 @@
                         <div class="about__para__text">
                             <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
                                 grids. We propose and discuss design rules for functional metasurfaces with randomly
-                            placed.</p>
+                                placed.</p>
                             <p>Anisotropic elements that randomly sample. Quisque sit amet nisl ante. Fusce lacinia non
-                            tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
+                                tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
                         </div>
                         <a href="#" class="primary-btn normal-btn">Learn More</a>
                     </div>
@@ -144,7 +161,8 @@
                 <div class="col-lg-6">
                     <div class="about__pic">
                         <div class="about__pic__inner">
-                            <img src="img/about-pic.jpg" alt="">
+                            <img src="img/ayz/ates-insaat-01.jpg" height="550px" width="450px" style=" background-size: cover;
+                            background-position: center;">
                         </div>
                     </div>
                 </div>
@@ -153,8 +171,15 @@
     </section>
     <!-- About Section End -->
 
- <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
+    <!-- Call To Action Section Begin -->
+    <section class="callto spad" style="
+ background: linear-gradient(
+     rgba(0, 0, 0, 0.4),
+     rgba(0, 0, 0, 0.4)
+   ),
+   url(img/ayz/ates-insaat-04.jpg);
+ background-size: cover;
+ background-position: center;">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10 text-center">
@@ -172,41 +197,36 @@
     <!-- Call To Action Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg" style="margin-bottom: -200px;margin-top: -50px; ">
+    <section class="testimonial spad set-bg" style="margin-bottom: -200px; margin-top: -50px; background-image: url('img/testimonial/testimonial-bg.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo__carousel owl-carousel">
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-1.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt="" style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-2.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt="" style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt="" style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-4.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt="" style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-5.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt="" style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt="" style="width: 150px; height: auto;"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
     <!-- Testimonial Section End -->
-
- 
-
-   
-   
- 
 
     <!-- Latest Section Begin -->
     <section class="latest spad">
@@ -275,33 +295,34 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright © <script>
-                                document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        </p>
+                            <p>Copyright ©
+                                <script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
+                                    aria-hidden="true"></i> by <a href="https://colorlib.com"
+                                    target="_blank">Colorlib</a>
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-5">
-                    <div class="copyright__widget">
-                        <a href="#">Terms of use</a>
-                        <a href="#">Privacy Policy</a>
+                    <div class="col-lg-4 col-md-5">
+                        <div class="copyright__widget">
+                            <a href="#">Terms of use</a>
+                            <a href="#">Privacy Policy</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </footer>
-<!-- Footer Section End -->
+    <!-- Footer Section End -->
 
-<!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/main.js"></script>
+    <!-- Js Plugins -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.slicknav.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
