--- a/indexEn.html
+++ b/indexEn.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/slick.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
@@ -37,8 +38,8 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <a href="about.html">
-                <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
+            <a href="index.html">
+                <img src="img/en.png" alt="En" style="width:70px; margin-left: 0px; margin-top: -30px; ">
             </a>
         </div>
     </div>
@@ -56,26 +57,33 @@
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Anasayfa</a></li>
-                            <li class="active"><a href="./about.html">Hakkımızda</a></li>
-                            <li><a href="./galeri.html">Galeri</a></li>
+                            <li class="active"><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./galeri.html">Gallery</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="./galeri.html">Gallery</a></li>
+                                    <li><a href="./contact.html">Contact</a></li>
+                                    <li><a href="./.html">Services</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Basında Biz</a></li>
-                            <li><a href="./contact.html">İletişim</a></li>
+                            <li><a href="./blog.html">News</a>
+                                <ul class="dropdown">
+                                    <li><a href="./blog-details.html">AYZ Construction in Media</a></li>
+                                    <li><a href="./blog-details.html">News from Us</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="./contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
-                        <a href="about.html">
-                            <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
+                        <a href="index.html">
+                            <img src="img/en.png" alt="En" style="width:70px; ">
                         </a>
                     </div>
                 </div>
@@ -85,134 +93,161 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad" style="
-    background: linear-gradient(
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4)
-      ),
-      url(img/ayz/atesABOUT.png);
-    background-size: cover;
-    background-position: center;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="breadcrumb__text">
-                        <h2>HAKKIMIZDA</h2>
-                        <div class="breadcrumb__links">
-                            <a href="./index.html">ANASAYFA</a>
-                            <span>HAKKIMIZDA</span>
-                        </div>
+    <!-- Hero Section Begin -->
+    <section class="hero">
+        <div class="hero__slider owl-carousel">
+            <div class="hero__items" style="
+            background: linear-gradient(
+                rgba(0, 0, 0, 0.4),
+                rgba(0, 0, 0, 0.4)
+              ),
+              url(img/ayz/atesABOUT.png);
+            background-size: cover;
+            background-position: center;
+          ">
+                <div class="hero__text">
+                    <h2>Quality is not only our standard.</h2>
+                    <a href="#" class="primary-btn" style="background-color: rgba(97, 95, 95, 0.692);">Read More.</a>
+                    <a href="#" class="more_btn">Read More.</a>
+                    <div class="hero__social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- Breadcrumb Section End -->
-
-    <!-- About Page Section Begin -->
-    <section class="about-page spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4">
-                    <div class="about__text about__page__text">
-                        <div class="section-title">
-                            <span>AYZ İNŞAAT</span>
-                            <h2>HAKKIMIZDA</h2>
-                        </div>
-                        <div class="about__para__text">
-                            <p>As you might expect of a company that began as a high-end interiors contractor.</p>
-                        </div>
+            <div class="hero__items" style="
+            background: linear-gradient(
+                rgba(0, 0, 0, 0.4),
+                rgba(0, 0, 0, 0.4)
+              ),
+              url(img/ayz/ates-insaat-makina-16.jpg);
+            background-size: cover;
+            background-position: center;
+          ">
+                <div class="hero__text">
+                    <h2>Quality is not only our standard.</h2>
+                    <a href="#" class="primary-btn" style="background-color: rgba(97, 95, 95, 0.692);">Read More.</a>
+                    <a href="#" class="more_btn">Read More.</a>
+                    <div class="hero__social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-8 col-md-8">
-                    <div class="about__page__services">
-                        <div class="about__page__services__text">
+            </div>
+
+        </div>
+        <div class="slide-num" id="snh-1"></div>
+        <div class="slider__progress"><span></span></div>
+    </section>
+    <!-- Hero Section End -->
+
+    <!-- About Section Begin -->
+    <section class="about spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about__text">
+                        <div class="section-title">
+                            <span>WHO WE ARE</span>
+                            <h2>We propose and discuss design rules</h2>
+                        </div>
+                        <div class="about__para__text">
                             <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
                                 grids. We propose and discuss design rules for functional metasurfaces with randomly
-                                placed. Anisotropic elements that randomly sample. Quisque sit amet nisl ante.</p>
+                                placed.</p>
+                            <p>Anisotropic elements that randomly sample. Quisque sit amet nisl ante. Fusce lacinia non
+                                tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-6">
-                                <div class="services__item">
-                                    <img src="img/services/services-5.png" alt="">
-                                    <h4>Our Mission</h4>
-                                    <p>As you might expect of a company that began as a high-end interiors contractor,
-                                        we pay strict attention. Anisotropic elements that randomly sample.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-6">
-                                <div class="services__item">
-                                    <img src="img/services/services-6.png" alt="">
-                                    <h4>Our Vision</h4>
-                                    <p>Our commitment to exceptional quality has never wavered. To day ranks as one of
-                                        the most highly-regarded construction. Anisotropic elements that randomly
-                                        sample.</p>
-                                </div>
-                            </div>
+                        <a href="#" class="primary-btn normal-btn">Learn More</a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about__pic">
+                        <div class="about__pic__inner">
+                            <img src="img/ayz/ates-insaat-07.jpg" height="550px" width="450px" style=" background-size: cover;
+                            background-position: center;">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- About Page Section End -->
+    <!-- About Section End -->
 
     <!-- Call To Action Section Begin -->
     <section class="callto spad" style="
-    background: linear-gradient(
-        rgba(0, 0, 0, 0.37),
-        rgba(0, 0, 0, 0.836)
-      ),
-      url(img/ayz/ates-insaat-04.jpg);
-    background-size: cover;
-    background-position: center;">
+ background: linear-gradient(
+     rgba(0, 0, 0, 0.4),
+     rgba(0, 0, 0, 0.4)
+   ),
+   url(img/ayz/ates-insaat-04.jpg);
+ background-size: cover;
+ background-position: center;">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
-                        <span>Lorem ipsum dolor sit amet.</span>
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, recusandae?</h2>
-                        <!--  !> <a href="#" class="primary-btn">Contact Us</a> -->
+                        <span>Why choose us?</span>
+                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
+                        </h2>
+                        <a href="#" class="primary-btn">Contact Us</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    <br><br>
     <!-- Call To Action Section End -->
 
-    <!-- Team Section Begin -->
-    <section class="testimonial spad">
+    <!-- Testimonial Section Begin -->
+    <section class="testimonial spad"
+        style="margin-bottom: -200px; margin-top: -50px; background-image: url('img/testimonial/testimonial-bg.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo__carousel owl-carousel">
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt=""></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Team Section End -->
+
+    <!-- Testimonial Section End -->
+
+    <!-- Latest Section Begin -->
+    <section class="latest spad">
+        <div class="container">
+        </div>
+    </section>
+    <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer set-bg">
@@ -223,7 +258,8 @@
                         <div class="footer__logo">
                             <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
                         </div>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <p>Kazım Özalp Neighborhood, Rabat Street No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara -
+                            Turkey
                         </p>
                         <ul>
                             <li>info@ayzinsaat.com</li>
@@ -239,30 +275,31 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Site Haritası</h6>
+                        <h6>Site Map</h6>
                         <ul>
-                            <li><a href="#">Anasayfa</a></li>
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Galeri</a></li>
-                            <li><a href="#">Projeler</a></li>
-                            <li><a href="#">İletişim</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Basında Biz</h6>
+                        <h6>News</h6>
                         <ul>
-                            <li><a href="#">Haberler</a></li>
-                            <li><a href="#">Basın Bültenleri</a></li>
+                            <li><a href="#">AYZ Construction in Media</a></li>
+                            <li><a href="#">News from Us</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>İletişim</h6>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <h6>Contact</h6>
+                        <p>Kazım Özalp Neighborhood, Rabat Street No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara -
+                            Turkey
                         </p>
                         <ul>
                             <li>info@ayzinsaat.com</li>
@@ -294,7 +331,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-     
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
