--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <a href="about.html">
+            <a href="indexEn.html">
                 <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
             </a>
         </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
-                        <a href="about.html">
+                        <a href="indexEn.html">
                             <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
                         </a>
                     </div>
@@ -100,8 +100,8 @@
           ">
                 <div class="hero__text">
                     <h2>Quality is not only our standard.</h2>
-                    <a href="#" class="primary-btn" style="background-color: rgb(0, 0, 0);">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
+                    <a href="#" class="primary-btn" style="background-color: rgba(97, 95, 95, 0.692);">Daha Fazla</a>
+                    <a href="#" class="more_btn">Daha Fazla</a>
                     <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -121,8 +121,8 @@
           ">
                 <div class="hero__text">
                     <h2>Quality is not only our standard.</h2>
-                    <a href="#" class="primary-btn" style="background-color: rgb(0, 0, 0);">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
+                    <a href="#" class="primary-btn" style="background-color: rgba(97, 95, 95, 0.692);">Daha Fazla</a>
+                    <a href="#" class="more_btn">Daha Fazla</a>
                     <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -146,22 +146,21 @@
                     <div class="about__text">
                         <div class="section-title">
                             <span>who are we</span>
-                            <h2>We propose and discuss design rules</h2>
+                            <h2>Lorem ipsum dolor sit amet.</h2>
                         </div>
                         <div class="about__para__text">
-                            <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
-                                grids. We propose and discuss design rules for functional metasurfaces with randomly
-                                placed.</p>
-                            <p>Anisotropic elements that randomly sample. Quisque sit amet nisl ante. Fusce lacinia non
-                                tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi rerum ipsa consectetur..
+                            </p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod expedita asperiores
+                                ducimus culpa incidunt.</p>
                         </div>
-                        <a href="#" class="primary-btn normal-btn">Learn More</a>
+                        <a href="#" class="primary-btn normal-btn">Daha Fazla</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="about__pic">
                         <div class="about__pic__inner">
-                            <img src="img/ayz/ates-insaat-07.jpg" height="550px" width="450px" style=" background-size: cover;
+                            <img src="img/ayz/ates-insaat-galeri.jpg" height="550px" width="450px" style=" background-size: cover;
                             background-position: center;">
                         </div>
                     </div>
@@ -184,10 +183,10 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
-                        <span>Why choose us?</span>
-                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
+                        <span>Lorem, ipsum dolor.</span>
+                        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         </h2>
-                        <a href="#" class="primary-btn">Contact Us</a>
+                        <a href="contact.html" class="primary-btn">İletişim</a>
                     </div>
                 </div>
             </div>
@@ -197,7 +196,7 @@
     <!-- Call To Action Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg"
+    <section class="testimonial spad"
         style="margin-bottom: -200px; margin-top: -50px; background-image: url('img/testimonial/testimonial-bg.jpg');">
         <div class="container">
             <div class="row">
@@ -243,17 +242,18 @@
     <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+    <footer class="footer set-bg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
                         </div>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        </p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
+                            <li>info@ayzinsaat.com</li>
                             <li>+84 123 456 789</li>
                         </ul>
                         <div class="footer__social">
@@ -266,33 +266,33 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Company</h6>
+                        <h6>Site Haritası</h6>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Our Works</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Anasayfa</a></li>
+                            <li><a href="#">Hakkımızda</a></li>
+                            <li><a href="#">Galeri</a></li>
+                            <li><a href="#">Projeler</a></li>
+                            <li><a href="#">İletişim</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Services</h6>
+                        <h6>Basında Biz</h6>
                         <ul>
-                            <li><a href="#">Architecture</a></li>
-                            <li><a href="#">Interior Design</a></li>
-                            <li><a href="#">Exterior Design</a></li>
-                            <li><a href="#">Planning</a></li>
+                            <li><a href="#">Haberler</a></li>
+                            <li><a href="#">Basın Bültenleri</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>Get In Touch</h6>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <h6>İletişim</h6>
+                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        </p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
+                            <li>info@ayzinsaat.com</li>
                             <li>+84 123 456 789</li>
                         </ul>
                     </div>
@@ -305,9 +305,8 @@
                             <p>Copyright ©
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                    aria-hidden="true"></i> by <a href="https://colorlib.com"
-                                    target="_blank">Colorlib</a>
+                                </script> All rights reserved | This website is made with by <a href="tual.com"
+                                    target="_blank">TU & AL</a>
                             </p>
                         </div>
                     </div>
