--- a/project-details.html
+++ b/project-details.html
@@ -11,7 +11,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
@@ -37,7 +37,7 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <a href="about.html" >
+            <a href="about.html">
                 <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
             </a>
         </div>
@@ -127,9 +127,9 @@
                             <h2>Office Building Creative</h2>
                             <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
                                 grids. We propose and discuss design rules for functional metasurfaces with randomly
-                            placed.</p>
+                                placed.</p>
                             <p>Anisotropic elements that randomly sample. Quisque sit amet nisl ante. Fusce lacinia non
-                            tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
+                                tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
                         </div>
                         <div class="product__details__widget">
                             <div class="product__details__widget__item">
@@ -153,34 +153,18 @@
     <!-- Project Details Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+    <footer class="footer set-bg">
         <div class="container">
-            <div class="footer__top">
-                <div class="row">
-                    <div class="col-lg-8 col-md-6">
-                        <div class="footer__top__text">
-                            <h2>Ready To Work With Us?</h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer__top__newslatter">
-                            <form action="#">
-                                <input type="text" placeholder="Enter your email...">
-                                <button type="submit"><i class="fa fa-send"></i></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
                         </div>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        </p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
+                            <li>info@ayzinsaat.com</li>
                             <li>+84 123 456 789</li>
                         </ul>
                         <div class="footer__social">
@@ -193,33 +177,33 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Company</h6>
+                        <h6>Site Haritası</h6>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Our Works</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Anasayfa</a></li>
+                            <li><a href="#">Hakkımızda</a></li>
+                            <li><a href="#">Galeri</a></li>
+                            <li><a href="#">Projeler</a></li>
+                            <li><a href="#">İletişim</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Services</h6>
+                        <h6>Basında Biz</h6>
                         <ul>
-                            <li><a href="#">Architecture</a></li>
-                            <li><a href="#">Interior Design</a></li>
-                            <li><a href="#">Exterior Design</a></li>
-                            <li><a href="#">Planning</a></li>
+                            <li><a href="#">Haberler</a></li>
+                            <li><a href="#">Basın Bültenleri</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>Get In Touch</h6>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <h6>İletişim</h6>
+                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        </p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
+                            <li>info@ayzinsaat.com</li>
                             <li>+84 123 456 789</li>
                         </ul>
                     </div>
@@ -229,33 +213,33 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright © <script>
-                                document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        </p>
+                            <p>Copyright ©
+                                <script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved | This website is made with by <a href="tual.com"
+                                    target="_blank">TU & AL</a>
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-5">
-                    <div class="copyright__widget">
-                        <a href="#">Terms of use</a>
-                        <a href="#">Privacy Policy</a>
+                    <div class="col-lg-4 col-md-5">
+                        <div class="copyright__widget">
+                            <a href="#">Terms of use</a>
+                            <a href="#">Privacy Policy</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
-<!-- Footer Section End -->
+    </footer>
+    <!-- Footer Section End -->
 
-<!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/main.js"></script>
+    <!-- Js Plugins -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.slicknav.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
